--- a/flx/src/scss/_fonts.scss
+++ b/flx/src/scss/_fonts.scss
@@ -1,3 +1,5 @@
 html {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-transform: uppercase;
+  font-size: 2rem;
 }
