--- a/flx/src/scss/style.scss
+++ b/flx/src/scss/style.scss
@@ -3,9 +3,8 @@
 
 html {
   font-size: 62.5%;
+  color: aliceblue;
 }
-
-
 
 body {
   background-color: #212121;
@@ -22,4 +21,13 @@ body {
   justify-content: space-around;
 }
 
+.flexbox2 {
+  display: flex;
+  background-color:#9E9E9E
+  flex-direction: row;
+  margin: 1rem;
+  padding: 2rem;
+  height: 20rem;
+  justify-content: space-around;
+}
 
